--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <p id="monthly-payment">Mėn. įmoka už būsto kreditą:</p>
             <p id="DTI">DTI:</p>
-            <p id="DSTI">DSTI:</p>
+            <p id="DSTI">DTI stress:</p>
             <p id="LTI">LTI:</p>
             <p id="max-loan">Maksimaliai galima pasiskolinti:</p>
             <p id="loan-cost">Bendra sumokama suma:</p>
