--- a/index.html
+++ b/index.html
@@ -61,8 +61,18 @@
             </div>
 
             <div class="input-wrapper">
-                <label for="income">Grynosios pajamos kas mėn., eurais</label>
+                <label for="income">Šeimos pajamos kas mėn. atskaičius mokesčius, eurais</label>
                 <input type="number" id="income">
+            </div>
+
+            <div class="input-wrapper">
+                <label for="adults">Suaugusiųjų skaičius</label>
+                <input type="number" id="adults" value="1">
+            </div>
+
+            <div class="input-wrapper">
+                <label for="kids">Vaikų skaičius</label>
+                <input type="number" id="kids" value="0">
             </div>
 
             <div class="input-wrapper">
@@ -94,6 +104,7 @@
             <p id="monthly-payment">Mėn. įmoka už būsto kreditą:</p>
             <p id="DTI">DTI:</p>
             <p id="DSTI">DTI stress:</p>
+            <p id="disposibles">Lėšos pragyvenimui: </p>
             <p id="LTI">LTI:</p>
             <p id="max-loan">Maksimaliai galima pasiskolinti:</p>
             <p id="loan-cost">Bendra sumokama suma:</p>
