--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <p>Visų esamų ir planuojamų įsipareigojimų įmoka kas mėn. neturi sudaryti daugiau nei 40% mėn. pajamų. DTI stress yra tas pats kas DTI, tačiau pasiūrima, kiek įmoka sudarys tavo pajamų jeigu padidėja palūkanos, neturi viršyti 50%.
                 <span class="more-info">
 
-                    <em>Daugiau info:</em> <a href="https://e-seimas.lrs.lt/portal/legalAct/lt/TAD/TAIS.405879/asr"
+                    <em>Daugiau info:</em> <a class="links" href="https://e-seimas.lrs.lt/portal/legalAct/lt/TAD/TAIS.405879/asr"
                         target="_blank">Nutarimas dėl atsakingojo
                         skolinimosi nuostatų, 5 skyrius</a>
                 </span>
