--- a/index.html
+++ b/index.html
@@ -16,30 +16,38 @@
 <body>
 
     <header class="header">
-        <h1>Būsto paskolos skaičiuoklė</h1>
+        <div class="img-wrapper">
+            <h1>Išmani būsto paskolos skaičiuoklė</h1>
+            <p>Skaičiuoklė be nutylėjimų</p>
+        </div>
     </header>
 
     <main class="main">
+
         <section class="calculator-input">
 
             <h2>Įveskite duomenis</h2>
 
             <div class="input-wrapper">
 
-                <label for="loanperiod">Paskolos laikotarpis, metais</label>
-                <input type="number" id="loanperiod" min="1" max="30" value="30" onkeyup="if(value>30) value=30;">
-                <div class="info-wrapper"><svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
-                        text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
-                        clip-rule="evenodd" viewBox="0 0 512 512">
-                        <path fill-rule="nonzero"
-                            d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
-                    </svg>
-
-                    <div class="info-text">Maksimalus galimas paskolos laikotarpis yra 30 metų, standartiškai skolinama
-                        iki 65 metų amžiaus</div>
-
-
+                <div class="input-info">
+                    <label for="loanperiod">Paskolos laikotarpis, metais</label>
+                    <div class="info-wrapper">
+                        <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
+                            text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
+                            clip-rule="evenodd" viewBox="0 0 512 512">
+                            <path fill-rule="nonzero"
+                                d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
+                        </svg>
+                        <div class="info-text">Maksimalus galimas paskolos laikotarpis yra 30 metų, standartiškai
+                            skolinama
+                            iki 65 metų amžiaus</div>
+                    </div>
                 </div>
+
+                <input type="number" id="loanperiod" min="1" max="30" value="30" onkeyup="if(value>30) value=30;">
+
+
 
             </div>
 
@@ -49,20 +57,24 @@
             </div>
 
             <div class="input-wrapper">
-                <label for="interest">Metinė palūkanų norma, %</label>
+
+                <div class="input-info">
+                    <label for="interest">Metinė palūkanų norma, %</label>
+                    <div class="info-wrapper">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
+                            text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
+                            clip-rule="evenodd" viewBox="0 0 512 512">
+                            <path fill-rule="nonzero"
+                                d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
+                        </svg>
+                        <div class="info-text">Palūkanos susideda iš dviejų dalių: banko maržos ir EURIBOR. </div>
+                    </div>
+                </div>
+
+
                 <input type="number" id="interest" value="4.5">
 
-                <div class="info-wrapper"><svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
-                        text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
-                        clip-rule="evenodd" viewBox="0 0 512 512">
-                        <path fill-rule="nonzero"
-                            d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
-                    </svg>
-
-                    <div class="info-text">Palūkanos susideda iš dviejų dalių: banko maržos ir EURIBOR. </div>
-
-
-                </div>
 
 
             </div>
@@ -75,57 +87,76 @@
             </div>
 
             <div class="input-wrapper">
-                <label for="adults">Suaugusiųjų skaičius</label>
+
+
+                <div class="input-info">
+                    <label for="adults">Suaugusiųjų skaičius</label>
+                    <div class="info-wrapper">
+                        <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
+                            text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
+                            clip-rule="evenodd" viewBox="0 0 512 512">
+                            <path fill-rule="nonzero"
+                                d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
+                        </svg>
+                        <div class="info-text">Pragyvenimo suma suaugusiui: 575 eurų. </div>
+                    </div>
+                </div>
+
                 <input type="number" id="adults" value="1">
 
-                <div class="info-wrapper"><svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
-                        text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
-                        clip-rule="evenodd" viewBox="0 0 512 512">
-                        <path fill-rule="nonzero"
-                            d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
-                    </svg>
-
-                    <div class="info-text">Pragyvenimo suma suaugusiui: 550 eurų. </div>
-
-
-                </div>
 
 
             </div>
 
             <div class="input-wrapper">
-                <label for="kids">Vaikų skaičius</label>
+
+
+
+                <div class="input-info">
+                    <label for="kids">Vaikų skaičius</label>
+                    <div class="info-wrapper">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
+                            text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
+                            clip-rule="evenodd" viewBox="0 0 512 512">
+                            <path fill-rule="nonzero"
+                                d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
+                        </svg>
+
+                        <div class="info-text">Pragyvenimo suma vaikui: 215 eurų. </div>
+
+
+                    </div>
+
+                </div>
+
+
                 <input type="number" id="kids" value="0">
 
-                <div class="info-wrapper"><svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
-                        text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
-                        clip-rule="evenodd" viewBox="0 0 512 512">
-                        <path fill-rule="nonzero"
-                            d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
-                    </svg>
 
-                    <div class="info-text">Pragyvenimo suma vaikui: 200 eurų. </div>
-
-
-                </div>
 
             </div>
 
             <div class="input-wrapper">
-                <label for="obligationtotal">Bendra įsipareigojimų suma, eurais</label>
+
+                <div class="input-info">
+
+                    <label for="obligationtotal">Bendra įsipareigojimų suma, eurais</label>
+                    <div class="info-wrapper">
+                        <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
+                            text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
+                            clip-rule="evenodd" viewBox="0 0 512 512">
+                            <path fill-rule="nonzero"
+                                d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
+                        </svg>
+                        <div class="info-text">Įveskite visų savo esamų kredito limitų, paskolų, lizingų sumą.</div>
+                    </div>
+                </div>
+
+
+
                 <input type="number" id="obligationtotal" value="0">
 
-                <div class="info-wrapper"><svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
-                        text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
-                        clip-rule="evenodd" viewBox="0 0 512 512">
-                        <path fill-rule="nonzero"
-                            d="M256 0c70.69 0 134.7 28.66 181.02 74.98C483.34 121.31 512 185.31 512 256c0 70.69-28.66 134.7-74.98 181.02C390.7 483.34 326.69 512 256 512c-70.69 0-134.7-28.66-181.02-74.98C28.66 390.7 0 326.69 0 256c0-70.69 28.66-134.69 74.98-181.02C121.3 28.66 185.31 0 256 0zm17.75 342.25h29.15v29.32h-93.79v-29.32h28.76v-92.34h-28.76v-29.32h64.64v121.66zm-27.94-150.37c-7.08-.05-13.12-2.53-18.2-7.56-5.08-5.01-7.56-11.11-7.56-18.25 0-7.01 2.48-13.06 7.56-18.08 5.08-5.02 11.12-7.55 18.2-7.55 6.95 0 12.99 2.53 18.08 7.55 5.13 5.02 7.67 11.07 7.67 18.08 0 4.72-1.2 9.07-3.56 12.94-2.36 3.93-5.45 7.07-9.31 9.37-3.87 2.3-8.17 3.45-12.88 3.5zm171.9-97.59C376.33 52.92 319.15 27.32 256 27.32c-63.15 0-120.33 25.6-161.71 66.97C52.92 135.68 27.32 192.85 27.32 256c0 63.15 25.6 120.33 66.97 161.71 41.38 41.37 98.56 66.97 161.71 66.97 63.15 0 120.33-25.6 161.71-66.97 41.37-41.38 66.97-98.56 66.97-161.71 0-63.15-25.6-120.32-66.97-161.71z" />
-                    </svg>
-
-                    <div class="info-text">Įveskite visų savo esamų kredito limitų, paskolų, lizingų sumą.</div>
-
-
-                </div>
 
 
 
@@ -136,7 +167,10 @@
                 <input type="number" id="obligationmonthly" value="0">
             </div>
 
-            <button class="calculate-click" onclick="calculateMortgage()">Skaičiuoti</button>
+            <div class="button-wrap">
+
+                <button class="calculate-click" onclick="calculateMortgage()">Skaičiuoti</button>
+            </div>
 
         </section>
 
@@ -169,11 +203,14 @@
 
             <h3> DTI ir DTI stress</h3>
 
-            <p>Visų esamų ir planuojamų įsipareigojimų įmoka kas mėn. neturi sudaryti daugiau nei 40% mėn. pajamų. DTI stress yra tas pats kas DTI, tačiau pasiūrima, kiek įmoka sudarys tavo pajamų jeigu padidėja palūkanos, neturi viršyti 50%.
+            <p>Visų esamų ir planuojamų įsipareigojimų įmoka kas mėn. neturi sudaryti daugiau nei 40% mėn. pajamų. DTI
+                stress yra tas pats kas DTI, tačiau pasiūrima, kiek įmoka sudarys tavo pajamų jeigu padidėja palūkanos,
+                neturi viršyti 50%.
                 <span class="more-info">
 
-                    <em>Daugiau info:</em> <a class="links" href="https://e-seimas.lrs.lt/portal/legalAct/lt/TAD/TAIS.405879/asr"
-                        target="_blank">Nutarimas dėl atsakingojo
+                    <em>Daugiau info:</em> <a class="links"
+                        href="https://e-seimas.lrs.lt/portal/legalAct/lt/TAD/TAIS.405879/asr" target="_blank">Nutarimas
+                        dėl atsakingojo
                         skolinimosi nuostatų, 5 skyrius</a>
                 </span>
 
