--- a/index.html
+++ b/index.html
@@ -197,6 +197,13 @@
 
 
 
+       
+
+
+    </main>
+
+    <footer class="footer">
+
         <section class="calculator-explained">
 
             <h2>Paiškinimai</h2>
@@ -229,8 +236,7 @@
 
         </section>
 
-
-    </main>
+    </footer>
 
 
 
