--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="input-wrapper">
                 <label for="loanamount">Paskolos suma, eurais</label>
-                <input type="number" id="loanamount" required>
+                <input type="number" id="loanamount" value="125000">
             </div>
 
             <div class="input-wrapper">
@@ -81,7 +81,7 @@
 
             <div class="input-wrapper">
                 <label for="income">Šeimos pajamos kas mėn. atskaičius mokesčius, eurais</label>
-                <input type="number" id="income">
+                <input type="number" id="income" value="2650">
 
 
             </div>
@@ -211,8 +211,8 @@
             <h3> DTI ir DTI stress</h3>
 
             <p>Visų esamų ir planuojamų įsipareigojimų įmoka kas mėn. neturi sudaryti daugiau nei 40% mėn. pajamų. DTI
-                stress yra tas pats kas DTI, tačiau pasiūrima, kiek įmoka sudarys tavo pajamų jeigu padidėja palūkanos,
-                neturi viršyti 50%.
+                stress yra tas pats kas DTI, tačiau pasiūrima, kiek įmoka sudarys mėn. pajamų (neturi viršyti 50%) jeigu padidėja palūkanos.
+                
                 <span class="more-info">
 
                     <em>Daugiau info:</em> <a class="links"
@@ -228,7 +228,7 @@
             <h3>LTI</h3>
             <p>
 
-                Visų esamų ir planuojamų įsipareigojimų suma padalinta iš mėn. pajamų. Santykis dažniausiai neturi būti
+                Visų esamų ir planuojamų įsipareigojimų sumos santykis tarp mėn. pajamų. Santykis dažniausiai neturi būti
                 didesnis nei 72-84.
 
             </p>
