--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
                 <div class="loan-cat">
 
-                    <a href="" target="_blank">
+                    <a href="#">
                         <img src="getmoney.png" alt="loan cat">
                     </a>
                     <cite>Drawing by Dilladontdodat</cite>
@@ -274,7 +274,7 @@
 
                 <div class="loan-cat loan-cat-2">
 
-                    <a href="" target="_blank">
+                    <a href="#">
                         <img src="howmuchloan.PNG" alt="loan cat">
                     </a>
                     <cite>Drawing by Dilladontdodat</cite>
