--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <div class="loan-cat">
 
                     <a href="#">
-                        <img src="getmoney.png" alt="loan cat">
+                        <img src="getmoney.PNG" alt="loan cat">
                     </a>
                     <cite>Drawing by Dilladontdodat</cite>
                     
