--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                     <h3 class="LTI">LTI</h3>
                     
                     <p>
-                        <strong>LTI</strong> parodo kiek atlyginimų gali paskolinti. <br> Iš esmės LTI yra visų esamų ir planuojamų įsipareigojimų sumos santykis tarp mėn. pajamų. Santykis dažniausiai neturi
-                        būti didesnis nei 72-84. 
+                        <strong>LTI</strong> parodo kiek atlyginimų skoliniesi. <br> Iš esmės LTI yra santykis tarp visų esamų, planuojamų įsipareigojimų sumos ir mėn. pajamų. Dažnai negalima skolintis daugiau nei
+                        72-84 atlyginimų. Kiek maksimaliai algų gali pasiskolinti, priklauso nuo kreditoriaus ir nuo tavo rizikos lygio.
                     </p>
                 </div>
 
