--- a/schedule.html
+++ b/schedule.html
@@ -6,18 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Schedule</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="schedule.css">
 </head>
 
 <body>
-  
+
   <div class="wrapper">
+    <div class="schedule-info">
 
-    <h1>Paskolos grąžinimo grafikas</h1>
+      <h1>Paskolos grąžinimo grafikas</h1>
 
-    <p><i>Paskolos suma: 100 000, laikotarpis: 30 metų, palūkanos: 5%</i></p>
+      <p><i class="info"></i></p>
+    </div>
 
-    <table class="schedule">
+    <table class="schedule table">
       <thead>
         <tr>
           <th>Mėnesis</th>
@@ -35,7 +39,12 @@
 
   </div>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+    crossorigin="anonymous"></script>
   <script src="amortization_schedule.js"></script>
 </body>
 
