--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
                     <p>
 
-                    <p><strong>DTI </strong> (angl. Debt-to-Income) parodo ar sugebėsi mokėti už paskolą ir nebūsi persekiojimas. <br> DTI apskaičiuojamas kaip tavo visų mėnesio įsipareigojimų (paskolų, nuomos ir kt.) įmokų santykis su jūsų mėnesinėmis pajamomis. Bendros paskolų įmokos neturėtų viršyti 40% mėnesinių pajamų. </p>
+                    <p><strong>DTI </strong> (angl. Debt-to-Income) parodo ar sugebėsi mokėti už paskolą ir nebūsi persekiojimas. <br> DTI apskaičiuojamas kaip tavo visų mėnesio įsipareigojimų (paskolų, nuomos ir kt.) įmokų santykis su tavo mėnesinėmis pajamomis. Bendros paskolų įmokos neturėtų viršyti 40% mėnesinių pajamų. </p>
                     <p><strong>DTI stress</strong> tai labai panašus rodiklis, tačiau jis atsižvelgia į galimą palūkanų normų padidėjimą. Šis rodiklis padeda įvertinti, kaip atrodytų tavo įsipareigojimų ir pajamų santykis, jei palūkanų normos padidėtų. DTI stresas neturėtų viršyti 50%, siekiant užtikrinti, kad būtum pajėgus susidoroti su galimais finansiniais sunkumais. </p>
 
 
