--- a/schedule.html
+++ b/schedule.html
@@ -28,7 +28,7 @@
           <th>Įmoka</th>
           <th>Kredito dalis</th>
           <th>Palūkanos</th>
-          <th>Balansas</th>
+          <th>Kredito likutis</th>
         </tr>
       </thead>
       <tbody id="table-body">
